--- a/daw/Len_Marcas/indiceLen_Marcas.html
+++ b/daw/Len_Marcas/indiceLen_Marcas.html
@@ -23,78 +23,78 @@
         <section class="temaIndice">
             <span>1.- Reconocimiento de las características de los lenguajes de marca</span>
             <ul>
-                <li><a href="./lenMarUno.html#unoUno">Conceptos generales</a></li>
-                <li><a href="./lenMarUno.html#unoDos">Clasificación</a></li>
-                <li><a href="./lenMarUno.html#unoTres">Herramientas de edición</a></li>
-                <li><a href="./lenMarUno.html#unoCuatro">XML. Estructura, sintaxis y etiquetas</a></li>
-                <li><a href="./lenMarUno.html#unoCinco">Elaboración de documentos XML bien formados</a></li>
-                <li><a href="./lenMarUno.html#unoSeis">Utilización de espacio de nombres en XML</a></li>
+                <li><a href="./lenMarUno.html#subUno">Conceptos generales</a></li>
+                <li><a href="./lenMarUno.html#subDos">Clasificación</a></li>
+                <li><a href="./lenMarUno.html#subTres">Herramientas de edición</a></li>
+                <li><a href="./lenMarUno.html#subCuatro">XML. Estructura, sintaxis y etiquetas</a></li>
+                <li><a href="./lenMarUno.html#subCinco">Elaboración de documentos XML bien formados</a></li>
+                <li><a href="./lenMarUno.html#subSeis">Utilización de espacio de nombres en XML</a></li>
             </ul>
         </section>
         <section class="temaIndice">
             <span>2.- Utilización de lenguajes de marcas en entornos web</span>
             <ul>
-                <li><a href="./lenMarDos.html#dosUno">Evolución histórica</a></li>
-                <li><a href="./lenMarDos.html#dosDos">Identificación de etiquetas y atributos HTML. Etiquetas y abributos</a></li>
-                <li><a href="./lenMarDos.html#dosTres">Estructura básica. Comentarios</a></li>
-                <li><a href="./lenMarDos.html#dosCuatro">Elementos de un HTML</a></li>
-                <li><a href="./lenMarDos.html#dosCinco">XHTML y sus diferencias con HTML</a></li>
-                <li><a href="./lenMarDos.html#dosSeis">Versiones de HTML y XHTML</a></li>
-                <li><a href="./lenMarDos.html#dosSiete">Herramientas de diseño web. Editores simples. Editores avanzados. Gestores de lenguales HTML. Otras opciones</a></li>
-                <li><a href="./lenMarDos.html#dosOcho">Hojas de estilo</a></li>
+                <li><a href="./lenMarDos.html#subUno">Evolución histórica</a></li>
+                <li><a href="./lenMarDos.html#subDos">Identificación de etiquetas y atributos HTML. Etiquetas y abributos</a></li>
+                <li><a href="./lenMarDos.html#subTres">Estructura básica. Comentarios</a></li>
+                <li><a href="./lenMarDos.html#subCuatro">Elementos de un HTML</a></li>
+                <li><a href="./lenMarDos.html#subCinco">XHTML y sus diferencias con HTML</a></li>
+                <li><a href="./lenMarDos.html#subSeis">Versiones de HTML y XHTML</a></li>
+                <li><a href="./lenMarDos.html#subSiete">Herramientas de diseño web. Editores simples. Editores avanzados. Gestores de lenguales HTML. Otras opciones</a></li>
+                <li><a href="./lenMarDos.html#subOcho">Hojas de estilo</a></li>
             </ul>
         </section>
         <section class="temaIndice">
             <span>3.- Definición de esquemas y vocabularios de XML</span>
             <ul>
-                <li><a href="./lenMarTres.html#tresUno">Descripción de la información de documentos XML. Tecnologías</a></li>
-                <li><a href="./lenMarTres.html#tresDos">Asociación de un documento XML. Asociación de un documento XML con DTD. Asociación de un documento XML con XML Schema</a></li>
-                <li><a href="./lenMarTres.html#tresTres">Creación de descripciones.Estructura, reglas y sintaxis. Estructura y componentes de un DTD. Estructura y componentes de XML Schema</a></li>
-                <li><a href="./lenMarTres.html#tresCuatro">Validación. Validación de documentos XML con esquemas tipo DTD. Validación de documentos XML con esquemas tipo XML Schema</a></li>
-                <li><a href="./lenMarTres.html#tresCinco">Herramientas de creación y validación</a></li>
+                <li><a href="./lenMarTres.html#subUno">Descripción de la información de documentos XML. Tecnologías</a></li>
+                <li><a href="./lenMarTres.html#subDos">Asociación de un documento XML. Asociación de un documento XML con DTD. Asociación de un documento XML con XML Schema</a></li>
+                <li><a href="./lenMarTres.html#subTres">Creación de descripciones.Estructura, reglas y sintaxis. Estructura y componentes de un DTD. Estructura y componentes de XML Schema</a></li>
+                <li><a href="./lenMarTres.html#subCuatro">Validación. Validación de documentos XML con esquemas tipo DTD. Validación de documentos XML con esquemas tipo XML Schema</a></li>
+                <li><a href="./lenMarTres.html#subCinco">Herramientas de creación y validación</a></li>
             </ul>
         </section>
         <section class="temaIndice">
             <span>4.- Aplicación de los lenguajes de marcas a la sindicación de contenidos</span>
             <ul>
-                <li><a href="./lenMarCuatro.html#cuatroUno">Ámbitos de aplicación</a></li>
-                <li><a href="./lenMarCuatro.html#cuatroDos">Estructura de los canales de contenidos</a></li>
-                <li><a href="./lenMarCuatro.html#cuatroTres">Elementos principales de un RSS</a></li>
-                <li><a href="./lenMarCuatro.html#cuatroCuatro">Tecnologías de creación de canales de contenidos</a></li>
-                <li><a href="./lenMarCuatro.html#cuatroCinco">Validación y publicación</a></li>
-                <li><a href="./lenMarCuatro.html#cuatroSeis">Directorios de canales de contenidos</a></li>
-                <li><a href="./lenMarCuatro.html#cuatroSiete">Agregación</a></li>
+                <li><a href="./lenMarCuatro.html#subUno">Ámbitos de aplicación</a></li>
+                <li><a href="./lenMarCuatro.html#subDos">Estructura de los canales de contenidos</a></li>
+                <li><a href="./lenMarCuatro.html#subTres">Elementos principales de un RSS</a></li>
+                <li><a href="./lenMarCuatro.html#subCuatro">Tecnologías de creación de canales de contenidos</a></li>
+                <li><a href="./lenMarCuatro.html#subCinco">Validación y publicación</a></li>
+                <li><a href="./lenMarCuatro.html#subSeis">Directorios de canales de contenidos</a></li>
+                <li><a href="./lenMarCuatro.html#subSiete">Agregación</a></li>
             </ul>
         </section>
         <section class="temaIndice">
             <span>5.- Conversión y adaptación de documentos XML</span>
             <ul>
-                <li><a href="./lenMarCinco.html#cincoUno">Necesidades y ámbitos de aplicación</a></li>
-                <li><a href="./lenMarCinco.html#cincoDos">Descripción y utilización de estructura, sintaxis y plantillas</a></li>
-                <li><a href="./lenMarCinco.html#cincoTres">Elaboración de documentación</a></li>
-                <li><a href="./lenMarCinco.html#cincoCuatro">XSL-FO</a></li>
+                <li><a href="./lenMarCinco.html#subUno">Necesidades y ámbitos de aplicación</a></li>
+                <li><a href="./lenMarCinco.html#subDos">Descripción y utilización de estructura, sintaxis y plantillas</a></li>
+                <li><a href="./lenMarCinco.html#subTres">Elaboración de documentación</a></li>
+                <li><a href="./lenMarCinco.html#subCuatro">XSL-FO</a></li>
             </ul>
         </section>
         <section class="temaIndice">
             <span>6.- Gestión y almacenamiento de información de XML</span>
             <ul>
-                <li><a href="./lenMarSeis.html#seisUno">Sistemas de almacenamiento de información XML. Tecnologías</a></li>
-                <li><a href="./lenMarSeis.html#seisDos">Bases de datos relacionales con XML. Inserción de información</a></li>
-                <li><a href="./lenMarSeis.html#seisTres">Técnicas de búsqueda de información en documentos XML</a></li>
-                <li><a href="./lenMarSeis.html#seisCuatro">Lenguajes de consulta, extracción y manipulación de la información en XML. XPath. XQuery</a></li>
-                <li><a href="./lenMarSeis.html#seisCinco">Sistemas gestores de bases de datos nativos XML. Herramientas para el tratamiento y almacenamiento de la información en XML</a></li>
+                <li><a href="./lenMarSeis.html#subUno">Sistemas de almacenamiento de información XML. Tecnologías</a></li>
+                <li><a href="./lenMarSeis.html#subDos">Bases de datos relacionales con XML. Inserción de información</a></li>
+                <li><a href="./lenMarSeis.html#subTres">Técnicas de búsqueda de información en documentos XML</a></li>
+                <li><a href="./lenMarSeis.html#subCuatro">Lenguajes de consulta, extracción y manipulación de la información en XML. XPath. XQuery</a></li>
+                <li><a href="./lenMarSeis.html#subCinco">Sistemas gestores de bases de datos nativos XML. Herramientas para el tratamiento y almacenamiento de la información en XML</a></li>
             </ul>
         </section>
         <section class="temaIndice">
             <span>7.- Sistema de gestión empresarial</span>
             <ul>
-                <li><a href="./lenMarSiete.html#sieteUno">Inteligencia del negocio</a></li>
-                <li><a href="./lenMarSiete.html#sieteDos">Sistemas de Gestión de recursos empresariales (ERP). SAP. Odoo</a></li>
-                <li><a href="./lenMarSiete.html#sieteTres">Software de gestión de relaciones con los clientes (CRM)</a></li>
-                <li><a href="./lenMarSiete.html#sieteCuatro">Instalación de un sistema de gestión empresarial</a></li>
-                <li><a href="./lenMarSiete.html#sieteCinco">Adaptación y configuración de un ERP. Integración de módulos</a></li>
-                <li><a href="./lenMarSiete.html#sieteSeis">Elaboración de informes</a></li>
-                <li><a href="./lenMarSiete.html#sieteSiete">Integración con aplicaciones ofimáticas. Exportación de la información</a></li>
+                <li><a href="./lenMarSiete.html#subUno">Inteligencia del negocio</a></li>
+                <li><a href="./lenMarSiete.html#subDos">Sistemas de Gestión de recursos empresariales (ERP). SAP. Odoo</a></li>
+                <li><a href="./lenMarSiete.html#subTres">Software de gestión de relaciones con los clientes (CRM)</a></li>
+                <li><a href="./lenMarSiete.html#subCuatro">Instalación de un sistema de gestión empresarial</a></li>
+                <li><a href="./lenMarSiete.html#subCinco">Adaptación y configuración de un ERP. Integración de módulos</a></li>
+                <li><a href="./lenMarSiete.html#subSeis">Elaboración de informes</a></li>
+                <li><a href="./lenMarSiete.html#subSiete">Integración con aplicaciones ofimáticas. Exportación de la información</a></li>
             </ul>
         </section>
     </main>
