--- a/daw/bdUno/bdUnoSiete.html
+++ b/daw/bdUno/bdUnoSiete.html
@@ -26,7 +26,7 @@
                 <div class="numeroTema">7</div>
                 <h2>Lenguajes de las BBDD para la creación de su estructura</h2>
             </div>
-            <article class="articuloApuntes" id="sieteUno">
+            <article class="articuloApuntes" id="subUno">
                 <a href=""></a>
                 <h3>Visitas y otras extensiones del lenguaje</h3>
             
