--- a/daw/bdUno/bdUnoUno.html
+++ b/daw/bdUno/bdUnoUno.html
@@ -19,7 +19,7 @@
             </div>
         </header>
         <div class="contenedorApuntes">
-            <h2 class="tituloTema" id="unoUno">Tema 1. - Introducción a las bases de datos</h2>
+            <h2 class="tituloTema" id="subUno">Tema 1. - Introducción a las bases de datos</h2>
             <p>Las bases de datos son una parte esencial e imprescindible en el ámbito de los sistemas informáticos.</p>
             <div class="nota">Una BBDD se puede definir como una agrupación de datos relacionados entre sí, almacenados en formato digital, con una organización o estructura determinada, de modo que se permite el acceso a dicha información con cierta rapidez.</div>
             <p>Las propiedades más importantes:</p>
@@ -30,7 +30,7 @@
                 <li>Se habilita su uso para un grupo de usuarios concreto.</li>
             </ul>
             <!--*********************************************************************-->
-            <h3 class="subTitulo" id="unoDos">Ventajas e inconvenientes de las BBDD</h3>
+            <h3 class="subTitulo" id="subDos">Ventajas e inconvenientes de las BBDD</h3>
             <p><strong>Ventajas</strong></p>
             <ul>
                 <li>La información contenida se procesa de forma independiente. Gracias a un buen diseño de relación entre los datos, conseguimos la menor redundancia posible.</li>
@@ -49,10 +49,10 @@
             <div class="menuOpcional">
                 <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
-                <a href="#unoUno"><div class="botonO">Arriba</div></a>
+                <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
             <!--*********************************************************************-->
-            <h3 class="subTitulo" id="unoTres">Almacenamiento de la información</h3>
+            <h3 class="subTitulo" id="subTres">Almacenamiento de la información</h3>
             <p>Las BBDD son hoy la técnica más eficiente para guardar información de todo tipo de una manera estructurada y accesible.</p>
             <p>Para almacenar información se utiliza un elemento clave llamado fichero. Los ficheros, también denominados archivos, son una secuencia de dígitos binarios que, siguiendo una estructura lógica determinada, almacenan una información concreta.</p>
             <h4 class="apartado">Tipos de ficheros</h4>
@@ -130,10 +130,10 @@
             <div class="menuOpcional">
                 <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
-                <a href="#unoUno"><div class="botonO">Arriba</div></a>
+                <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
             <!--*********************************************************************-->
-            <h3 class="subTitulo" id="unoCuatro">Sistemas gestores de bases de datos SGBD</h3>
+            <h3 class="subTitulo" id="subCuatro">Sistemas gestores de bases de datos SGBD</h3>
             <div class="nota">Un sistema gestor de base de datos o SGBD es un programa o software que facilita a la persona encargada de la administración de las BBDD el tratamiento de la información que contiene. Puede realizar operaciones como diseño, consulta y modificación de dichos datos.</div>
             <h4 class="apartado">Funciones, componentes y tipos</h4>
             <p>Las funciones de los SGBD se pueden clasificar en tres tipos</p>
@@ -226,31 +226,31 @@
             <div class="menuOpcional">
                 <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
-                <a href="#unoUno"><div class="botonO">Arriba</div></a>
+                <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
             <!--*********************************************************************-->
-            <h3 class="subTitulo" id="unoCinco">ANSI/X3/SPARC. Estándares y niveles</h3>
+            <h3 class="subTitulo" id="subCinco">ANSI/X3/SPARC. Estándares y niveles</h3>
 
             <div class="menuOpcional">
                 <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
-                <a href="#unoUno"><div class="botonO">Arriba</div></a>
+                <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
             <!--*********************************************************************-->
-            <h3 class="subTitulo" id="unoSeis">Modelos de BBDD. Tipos: jerárquico, red, relacional y orientado a objetos</h3>
+            <h3 class="subTitulo" id="subSeis">Modelos de BBDD. Tipos: jerárquico, red, relacional y orientado a objetos</h3>
             
             <div class="menuOpcional">
                 <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
-                <a href="#unoUno"><div class="botonO">Arriba</div></a>
+                <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
             <!--*********************************************************************-->
-            <h3 class="subTitulo" id="unoSiete">Bases de datos centralizadas y distribuidas</h3>
+            <h3 class="subTitulo" id="subSiete">Bases de datos centralizadas y distribuidas</h3>
 
             <div class="menuOpcional">
                 <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
-                <a href="#unoUno"><div class="botonO">Arriba</div></a>
+                <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
         </div><!-- Fin contenedorApuntes -->
         <footer class="pieApuntes"><div>- SapheryDesings -</div></footer>
