--- a/daw/dwEntornoCliente/dwEC_Uno.html
+++ b/daw/dwEntornoCliente/dwEC_Uno.html
@@ -19,15 +19,15 @@
             </div>
         </header>
         <div class="contenedorApuntes">
-            <h2 class="tituloTema" id="unoUno">Tema 1. - </h2>
+            <h2 class="tituloTema" id="subUno">Tema 1. - </h2>
             
             <!--*********************************************************************-->
-            <h3 class="subTitulo" id="unoDos">subTitulo</h3>
+            <h3 class="subTitulo" id="subDos">subTitulo</h3>
           
             <div class="menuOpcional">
                 <a href="../dwEntornoCliente/indice_dwEc.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
-                <a href="#unoUno"><div class="botonO">Arriba</div></a>
+                <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
             <!--*********************************************************************-->
         </div><!-- Fin contenedorApuntes -->
