--- a/daw/entornoDesarrollo/indice_entornoDesarrollo.html
+++ b/daw/entornoDesarrollo/indice_entornoDesarrollo.html
@@ -22,40 +22,40 @@
         <section class="temaIndice">
             <span>1.- Desarrollo de software</span>
             <ul>
-                <li><a href="./eD_Uno.html#unoUno">El software del ordenador</a></li>
-                <li><a href="./eD_Uno.html#unoDos">Concepto de programa informático</a></li>
-                <li><a href="./eD_Uno.html#unoTres">Código fuente, código objeto y código ejecutable. Máquinas virtuales</a></li>
-                <li><a href="./eD_Uno.html#unoCuatro">Tipos de lenguajes de programación. Clasificación y características de los lenguajes más difundidos</a></li>
-                <li><a href="./eD_Uno.html#unoCinco">Fases del desarrollo de una aplicación: análisis, diseño, codificación, pruebas, documentación, mantenimiento y explotación</a></li>
-                <li><a href="./eD_Uno.html#unoSeis">Metodologías ágiles</a></li>
-                <li><a href="./eD_Uno.html#unoSiete">Proceso de obtención de código a partir del código fuente. Herramientas implicadas</a></li>
+                <li><a href="./eD_Uno.html#subUno">El software del ordenador</a></li>
+                <li><a href="./eD_Uno.html#subDos">Concepto de programa informático</a></li>
+                <li><a href="./eD_Uno.html#subTres">Código fuente, código objeto y código ejecutable. Máquinas virtuales</a></li>
+                <li><a href="./eD_Uno.html#subCuatro">Tipos de lenguajes de programación. Clasificación y características de los lenguajes más difundidos</a></li>
+                <li><a href="./eD_Uno.html#subCinco">Fases del desarrollo de una aplicación: análisis, diseño, codificación, pruebas, documentación, mantenimiento y explotación</a></li>
+                <li><a href="./eD_Uno.html#subSeis">Metodologías ágiles</a></li>
+                <li><a href="./eD_Uno.html#subSiete">Proceso de obtención de código a partir del código fuente. Herramientas implicadas</a></li>
             </ul>
         </section>
         <section class="temaIndice">
             <span>2.- Instalación y uso de entornos de desarrollo</span>
             <ul>
-                <li><a href="./eD_Dos.html#dosUno">Funciones de un entorno de desarrollo</a></li>
-                <li><a href="./eD_Dos.html#dosDos">Instalación de un entorno de desarrollo</a></li>
+                <li><a href="./eD_Dos.html#subUno">Funciones de un entorno de desarrollo</a></li>
+                <li><a href="./eD_Dos.html#subDos">Instalación de un entorno de desarrollo</a></li>
 
             </ul>
         </section>
         <section class="temaIndice">
             <span>3.- Diseño y realización de pruebas</span>
             <ul>
-                <li><a href="./eD_Tres.html#tresUno">Planificación de pruebas</a></li>
-                <li><a href="./eD_Tres.html#tresDos">Estrategias de pruebas de software. Automatización de pruebas</a></li>
-                <li><a href="./eD_Tres.html#tresTres">Pruebas de código: cobertura, valores límite y clasees de equivalencia</a></li>
-                <li><a href="./eD_Tres.html#tresCuatro">Pruebas funcionales, pruebas estructurales y pruebas de regresión</a></li>
-                <li><a href="./eD_Tres.html#tresCinco">Herramientas de depuración de código</a></li>
-                <li><a href="./eD_Tres.html#tresSeis">Calidad del software</a></li>
+                <li><a href="./eD_Tres.html#subUno">Planificación de pruebas</a></li>
+                <li><a href="./eD_Tres.html#subDos">Estrategias de pruebas de software. Automatización de pruebas</a></li>
+                <li><a href="./eD_Tres.html#subTres">Pruebas de código: cobertura, valores límite y clasees de equivalencia</a></li>
+                <li><a href="./eD_Tres.html#subCuatro">Pruebas funcionales, pruebas estructurales y pruebas de regresión</a></li>
+                <li><a href="./eD_Tres.html#subCinco">Herramientas de depuración de código</a></li>
+                <li><a href="./eD_Tres.html#subSeis">Calidad del software</a></li>
             </ul>
         </section>
         <section class="temaIndice">
             <span>4.- Documentación y optimización</span>
             <ul>
-                <li><a href="./eD_Cuatro.html#cuatroUno">Refactorización. Concepto. Limitaciones. Patrones de refacción más usuales</a></li>
-                <li><a href="./eD_Cuatro.html#cuatroDos">Control de versiones. Estructura de las herramientas de control de versiones</a></li>
-                <li><a href="./eD_Cuatro.html#cuatroTres">Documentación. Uso de comentarios. Alternativas</a></li>
+                <li><a href="./eD_Cuatro.html#subUno">Refactorización. Concepto. Limitaciones. Patrones de refacción más usuales</a></li>
+                <li><a href="./eD_Cuatro.html#subDos">Control de versiones. Estructura de las herramientas de control de versiones</a></li>
+                <li><a href="./eD_Cuatro.html#subTres">Documentación. Uso de comentarios. Alternativas</a></li>
             </ul>
         </section>
         <section class="temaIndice">
@@ -67,19 +67,19 @@
         <section class="temaIndice">
             <span>6.- Elaboración de diagramas de clases</span>
             <ul>
-                <li><a href="./eD_Seis.html#seisUno">Objetos</a></li>
-                <li><a href="./eD_Seis.html#seisDos">Diagramas de clases</a></li>
-                <li><a href="./eD_Seis.html#seisTres">Herramientas para el diseño de diagramas</a></li>
+                <li><a href="./eD_Seis.html#subUno">Objetos</a></li>
+                <li><a href="./eD_Seis.html#subDos">Diagramas de clases</a></li>
+                <li><a href="./eD_Seis.html#subTres">Herramientas para el diseño de diagramas</a></li>
             </ul>
         </section>
         <section class="temaIndice">
             <span>7.- Elaboración de diagramas de comportamiento</span>
             <ul>
-                <li><a href="./eD_Siete.html#sieteUno">Tipo. Campo de aplicación</a></li>
-                <li><a href="./eD_Siete.html#sieteDos">Diagramas de casos de uso. Actores, escenario, relación de comunicación</a></li>
-                <li><a href="./eD_Siete.html#sieteTres">Diagramas de interacción</a></li>
-                <li><a href="./eD_Siete.html#sieteCuatro">Diagramas de estados. Estados, eventos, señales, transicines</a></li>
-                <li><a href="./eD_Siete.html#sieteCinco">Diagramas de actividades. Actividades, transiciones, decisiones y combinaciones</a></li>
+                <li><a href="./eD_Siete.html#subUno">Tipo. Campo de aplicación</a></li>
+                <li><a href="./eD_Siete.html#subDos">Diagramas de casos de uso. Actores, escenario, relación de comunicación</a></li>
+                <li><a href="./eD_Siete.html#subTres">Diagramas de interacción</a></li>
+                <li><a href="./eD_Siete.html#subCuatro">Diagramas de estados. Estados, eventos, señales, transicines</a></li>
+                <li><a href="./eD_Siete.html#subCinco">Diagramas de actividades. Actividades, transiciones, decisiones y combinaciones</a></li>
             </ul>
         </section>
     </main>
