--- a/daw/fol/indice_fol.html
+++ b/daw/fol/indice_fol.html
@@ -22,97 +22,97 @@
         <section class="temaIndice">
             <span>1.- Búsqueda activa de ocupación</span>
             <ul>
-                <li><a href="./fol_Uno.html#unoUno">Valoración de la importancia de la formación premanente para la trayectoria laboral y profesional del técnico o técnica en la materia</a></li>
-                <li><a href="./fol_Uno.html#unoDos">Análisis de los intereses, aptitudes y motivaciones personales para la carrera profesional</a></li>
-                <li><a href="./fol_Uno.html#unoTres">Las capacidades claves del técnico o técnica en la materia</a></li>
-                <li><a href="./fol_Uno.html#unoCuatro">El perfil profesional del técnico o técnica: definición y análisis. El sistema de calificaciones profesionales. Las competencias y las cualificaciones profesionales del título y de la familia profesional</a></li>
-                <li><a href="./fol_Uno.html#unoCinco">Identificación de itinerarios formativos relacionados con el título. Titulaciones y estudios</a></li>
-                <li><a href="./fol_Uno.html#unoSeis">Planificación de la carrera profesional</a></li>
-                <li><a href="./fol_Uno.html#unoSiete">Definición y análisis del ámbito profesional</a></li>
-                <li><a href="./fol_Uno.html#unoOcho">Yacimientos de ocupación en empresas de servicios a las personas, economía social, externalización de servicios a las empresas y soporte a equipos de trabajo</a></li>
-                <li><a href="./fol_Uno.html#unoNueve">Proceso de búsqueda de empleo en empresas del sector</a></li>
-                <li><a href="./fol_Uno.html#unoDiez">Oportunidades de aprendizaje y ocupación en europa</a></li>
-                <li><a href="./fol_Uno.html#unoOnce">Técnicas e instrumentos de búsqueda de ocupación</a></li>
-                <li><a href="./fol_Uno.html#unoDoce">El proceso de toma de decisiones</a></li>
-                <li><a href="./fol_Uno.html#unoTrece">Ofertas formativas dirigidas a grupos con dificultades de integración social</a></li>
-                <li><a href="./fol_Uno.html#unoCatorce">Igualdad de oportunidades entre hombres y mujeres</a></li>
-                <li><a href="./fol_Uno.html#unoQuince">Valoración del autoempleo como alternativa para la inserción laboral</a></li>
-                <li><a href="./fol_Uno.html#unoDieciseis">Valoración de los conocimientos y las competencias obtenidos mediante la formación contenida en el título</a></li>
+                <li><a href="./fol_Uno.html#subUno">Valoración de la importancia de la formación premanente para la trayectoria laboral y profesional del técnico o técnica en la materia</a></li>
+                <li><a href="./fol_Uno.html#subDos">Análisis de los intereses, aptitudes y motivaciones personales para la carrera profesional</a></li>
+                <li><a href="./fol_Uno.html#subTres">Las capacidades claves del técnico o técnica en la materia</a></li>
+                <li><a href="./fol_Uno.html#subCuatro">El perfil profesional del técnico o técnica: definición y análisis. El sistema de calificaciones profesionales. Las competencias y las cualificaciones profesionales del título y de la familia profesional</a></li>
+                <li><a href="./fol_Uno.html#subCinco">Identificación de itinerarios formativos relacionados con el título. Titulaciones y estudios</a></li>
+                <li><a href="./fol_Uno.html#subSeis">Planificación de la carrera profesional</a></li>
+                <li><a href="./fol_Uno.html#subSiete">Definición y análisis del ámbito profesional</a></li>
+                <li><a href="./fol_Uno.html#subOcho">Yacimientos de ocupación en empresas de servicios a las personas, economía social, externalización de servicios a las empresas y soporte a equipos de trabajo</a></li>
+                <li><a href="./fol_Uno.html#subNueve">Proceso de búsqueda de empleo en empresas del sector</a></li>
+                <li><a href="./fol_Uno.html#subDiez">Oportunidades de aprendizaje y ocupación en europa</a></li>
+                <li><a href="./fol_Uno.html#subOnce">Técnicas e instrumentos de búsqueda de ocupación</a></li>
+                <li><a href="./fol_Uno.html#subDoce">El proceso de toma de decisiones</a></li>
+                <li><a href="./fol_Uno.html#subTrece">Ofertas formativas dirigidas a grupos con dificultades de integración social</a></li>
+                <li><a href="./fol_Uno.html#subCatorce">Igualdad de oportunidades entre hombres y mujeres</a></li>
+                <li><a href="./fol_Uno.html#subQuince">Valoración del autoempleo como alternativa para la inserción laboral</a></li>
+                <li><a href="./fol_Uno.html#subDieciseis">Valoración de los conocimientos y las competencias obtenidos mediante la formación contenida en el título</a></li>
             </ul>
         </section>
         <section class="temaIndice">
             <span>2.- Equipos de trabajo y gestión del conflicto</span>
             <ul>
-                <li><a href="./fol_Dos.html#dosUno">Valoración de las ventajas y los inconvenientes del trabajo de equipo para la eficacia de la organización</a></li>
-                <li><a href="./fol_Dos.html#dosDos">Equipos: tareas y funciones que ejercen</a></li>
-                <li><a href="./fol_Dos.html#dosTres">Formas de participación en el equipo de trabajo</a></li>
-                <li><a href="./fol_Dos.html#dosCuatro">Conflicto: características, fuentes y etapas</a></li>
-                <li><a href="./fol_Dos.html#dosCinco">Métodos para resolver o suprimir el conflicto</a></li>
-                <li><a href="./fol_Dos.html#dosSeis">Aplicación de habilidades comunicativas en el trabajo en equipo</a></li>
+                <li><a href="./fol_Dos.html#subUno">Valoración de las ventajas y los inconvenientes del trabajo de equipo para la eficacia de la organización</a></li>
+                <li><a href="./fol_Dos.html#subDos">Equipos: tareas y funciones que ejercen</a></li>
+                <li><a href="./fol_Dos.html#subTres">Formas de participación en el equipo de trabajo</a></li>
+                <li><a href="./fol_Dos.html#subCuatro">Conflicto: características, fuentes y etapas</a></li>
+                <li><a href="./fol_Dos.html#subCinco">Métodos para resolver o suprimir el conflicto</a></li>
+                <li><a href="./fol_Dos.html#subSeis">Aplicación de habilidades comunicativas en el trabajo en equipo</a></li>
             </ul>
         </section>
         <section class="temaIndice">
             <span>3.- Relaciones laborales</span>
             <ul>
-                <li><a href="./fol_Tres.html#tresUno">Ventajas e inconvenientes de las nuevas formas de organización del trabajo: flexibilidad y beneficios sociales, entre otros</a></li>
-                <li><a href="./fol_Tres.html#tresDos">El derecho del trabajo: concepto y fuentes</a></li>
-                <li><a href="./fol_Tres.html#tresTres">Análisis de la relación laboral individual</a></li>
-                <li><a href="./fol_Tres.html#tresCuatro">Derechos y deberes que se derivan de la relación laboral y su aplicación</a></li>
-                <li><a href="./fol_Tres.html#tresCinco">Sectores de actividad económica. Ocupaciones transversales a diferentes sectores. Condiciones laborales</a></li>
-                <li><a href="./fol_Tres.html#tresSeis">Determinación de los elementos del contrato de trabajo, de las principales modalidades de contratación y de las medidas de fomento de trabajo</a></li>
-                <li><a href="./fol_Tres.html#tresSiete">Las condiciones de trabajo: tiempo, conciliación laboral y familiar</a></li>
-                <li><a href="./fol_Tres.html#tresOcho">Interpretación del recibo del salario</a></li>
-                <li><a href="./fol_Tres.html#tresNueve">Modificación, suspensión y extinción del contrato de trabajo. Expedientes de regulación de empleo</a></li>
-                <li><a href="./fol_Tres.html#tresDiez">Organismos laborales. Sistemas de asesoramiento de los trabajadores con relación a sus derechos y deberes</a></li>
-                <li><a href="./fol_Tres.html#tresOnce">Conflicto colectivo en la empresa</a></li>
-                <li><a href="./fol_Tres.html#tresDoce">La negociación en el ámbito laboral y la representación de los trabajadores</a></li>
-                <li><a href="./fol_Tres.html#tresTrece">El convenio colectivo como fruto de la negociación colectiva</a></li>
+                <li><a href="./fol_Tres.html#subUno">Ventajas e inconvenientes de las nuevas formas de organización del trabajo: flexibilidad y beneficios sociales, entre otros</a></li>
+                <li><a href="./fol_Tres.html#subDos">El derecho del trabajo: concepto y fuentes</a></li>
+                <li><a href="./fol_Tres.html#subTres">Análisis de la relación laboral individual</a></li>
+                <li><a href="./fol_Tres.html#subCuatro">Derechos y deberes que se derivan de la relación laboral y su aplicación</a></li>
+                <li><a href="./fol_Tres.html#subCinco">Sectores de actividad económica. Ocupaciones transversales a diferentes sectores. Condiciones laborales</a></li>
+                <li><a href="./fol_Tres.html#subSeis">Determinación de los elementos del contrato de trabajo, de las principales modalidades de contratación y de las medidas de fomento de trabajo</a></li>
+                <li><a href="./fol_Tres.html#subSiete">Las condiciones de trabajo: tiempo, conciliación laboral y familiar</a></li>
+                <li><a href="./fol_Tres.html#subOcho">Interpretación del recibo del salario</a></li>
+                <li><a href="./fol_Tres.html#subNueve">Modificación, suspensión y extinción del contrato de trabajo. Expedientes de regulación de empleo</a></li>
+                <li><a href="./fol_Tres.html#subDiez">Organismos laborales. Sistemas de asesoramiento de los trabajadores con relación a sus derechos y deberes</a></li>
+                <li><a href="./fol_Tres.html#subOnce">Conflicto colectivo en la empresa</a></li>
+                <li><a href="./fol_Tres.html#subDoce">La negociación en el ámbito laboral y la representación de los trabajadores</a></li>
+                <li><a href="./fol_Tres.html#subTrece">El convenio colectivo como fruto de la negociación colectiva</a></li>
             </ul>
         </section>
         <section class="temaIndice">
             <span>4.- Prestaciones sociales</span>
             <ul>
-                <li><a href="./fol_Cuatro.html#cuatroUno">Estructura del sistema de la Seguridad Social</a></li>
-                <li><a href="./fol_Cuatro.html#cuatroDos">Determinación de las principales obligaciones de empresarios y trabajadores en materia de Seguridad Social: afiliación, altas, bajas y cotización</a></li>
-                <li><a href="./fol_Cuatro.html#cuatroTres">Requisitos de las prestaciones</a></li>
-                <li><a href="./fol_Cuatro.html#cuatroCuatro">Prestaciones para la situación de desempleo</a></li>
-                <li><a href="./fol_Cuatro.html#cuatroCinco">Identificación de la información y el servicio de la plataforma de la Seguridad Social</a></li>
+                <li><a href="./fol_Cuatro.html#subUno">Estructura del sistema de la Seguridad Social</a></li>
+                <li><a href="./fol_Cuatro.html#subDos">Determinación de las principales obligaciones de empresarios y trabajadores en materia de Seguridad Social: afiliación, altas, bajas y cotización</a></li>
+                <li><a href="./fol_Cuatro.html#subTres">Requisitos de las prestaciones</a></li>
+                <li><a href="./fol_Cuatro.html#subCuatro">Prestaciones para la situación de desempleo</a></li>
+                <li><a href="./fol_Cuatro.html#subCinco">Identificación de la información y el servicio de la plataforma de la Seguridad Social</a></li>
             </ul>
         </section>
         <section class="temaIndice">
             <span>5.- Evaluación de riesgo profesionales</span>
             <ul>
-                <li><a href="./fol_Cinco.html#cincoUno">La evaluación de riesgos profesionales en la empresa como elemento básico de la actividad preventiva</a></li>
-                <li><a href="./fol_Cinco.html#cincoDos">La importancia de la cultura preventiva en todas las fases de la actividad profesional</a></li>
-                <li><a href="./fol_Cinco.html#cincoTres">Efectos de las condiciones de trabajo sobre la salud. Los accidentes de trabajo, la enfermedad profesional y las enfermedades inespecíficas</a></li>
-                <li><a href="./fol_Cinco.html#cincoCuatro">Riesgo profesional. Análisis y clasificación de factores de riesgo</a></li>
-                <li><a href="./fol_Cinco.html#cincoCinco">Análisis de los riesgos relativos a las condiciones de seguridad</a></li>
-                <li><a href="./fol_Cinco.html#cincoSeis">Análisis de los riesgos relativos a las condiciones ambientales</a></li>
-                <li><a href="./fol_Cinco.html#cincoSiete">Análisis de los riesgos relativos a las condiciones ergonómicas y psicosociales</a></li>
-                <li><a href="./fol_Cinco.html#cincoOcho">Riesgos genéricos en el ámbito profesional</a></li>
-                <li><a href="./fol_Cinco.html#cincoNueve">Daños para la salud ocasionados por los riesgos</a></li>
-                <li><a href="./fol_Cinco.html#cincoDiez">Riesgos genéricos en el ámbito profesional</a></li>
+                <li><a href="./fol_Cinco.html#subUno">La evaluación de riesgos profesionales en la empresa como elemento básico de la actividad preventiva</a></li>
+                <li><a href="./fol_Cinco.html#subDos">La importancia de la cultura preventiva en todas las fases de la actividad profesional</a></li>
+                <li><a href="./fol_Cinco.html#subTres">Efectos de las condiciones de trabajo sobre la salud. Los accidentes de trabajo, la enfermedad profesional y las enfermedades inespecíficas</a></li>
+                <li><a href="./fol_Cinco.html#subCuatro">Riesgo profesional. Análisis y clasificación de factores de riesgo</a></li>
+                <li><a href="./fol_Cinco.html#subCinco">Análisis de los riesgos relativos a las condiciones de seguridad</a></li>
+                <li><a href="./fol_Cinco.html#subSeis">Análisis de los riesgos relativos a las condiciones ambientales</a></li>
+                <li><a href="./fol_Cinco.html#subSiete">Análisis de los riesgos relativos a las condiciones ergonómicas y psicosociales</a></li>
+                <li><a href="./fol_Cinco.html#subOcho">Riesgos genéricos en el ámbito profesional</a></li>
+                <li><a href="./fol_Cinco.html#subNueve">Daños para la salud ocasionados por los riesgos</a></li>
+                <li><a href="./fol_Cinco.html#subDiez">Riesgos genéricos en el ámbito profesional</a></li>
             </ul>
         </section>
         <section class="temaIndice">
             <span>6.- Planificación de la prevención de riesgos de la empresa</span>
             <ul>
-                <li><a href="./fol_Seis.html#seisUno">Determinación de los derechos y deberes en materia de prevención de riesgos laborales</a></li>
-                <li><a href="./fol_Seis.html#seisDos">Sistemas de gestión de la prevención de riesgos en la empresa</a></li>
-                <li><a href="./fol_Seis.html#seisTres">Organismos públicos relacionados con la prevención de riesgos laborales</a></li>
-                <li><a href="./fol_Seis.html#seisCuatro">Plan de prevención de riesgos en la empresa. Estructura. Acciones preventivas. Medidas específicas</a></li>
-                <li><a href="./fol_Seis.html#seisCinco">Identificación de las responsabilidades en materia de prevención de riesgos laborales</a></li>
-                <li><a href="./fol_Seis.html#seisSeis">Determinación de la representación de los trabajadores en materia preventiva</a></li>
-                <li><a href="./fol_Seis.html#seisSiete">Planes de emergencia en entornos de trabajo. La evacuación y el confinamiento</a></li>
+                <li><a href="./fol_Seis.html#subUno">Determinación de los derechos y deberes en materia de prevención de riesgos laborales</a></li>
+                <li><a href="./fol_Seis.html#subDos">Sistemas de gestión de la prevención de riesgos en la empresa</a></li>
+                <li><a href="./fol_Seis.html#subTres">Organismos públicos relacionados con la prevención de riesgos laborales</a></li>
+                <li><a href="./fol_Seis.html#subCuatro">Plan de prevención de riesgos en la empresa. Estructura. Acciones preventivas. Medidas específicas</a></li>
+                <li><a href="./fol_Seis.html#subCinco">Identificación de las responsabilidades en materia de prevención de riesgos laborales</a></li>
+                <li><a href="./fol_Seis.html#subSeis">Determinación de la representación de los trabajadores en materia preventiva</a></li>
+                <li><a href="./fol_Seis.html#subSiete">Planes de emergencia en entornos de trabajo. La evacuación y el confinamiento</a></li>
             </ul>
         </section>
         <section class="temaIndice">
             <span>7.- Aplicación de medidas de prevención y protección en la empresa</span>
             <ul>
-                <li><a href="./fol_Siete.html#sieteUno">Determinación de las medidas de prevención y protección individual y colectiva</a></li>
-                <li><a href="./fol_Siete.html#sieteDos">Interpretación de la señalización de seguridad</a></li>
-                <li><a href="./fol_Siete.html#sieteTres">Consignas de actuación ante una situación de emergencia</a></li>
-                <li><a href="./fol_Siete.html#sieteCuatro">Protocolos de actuación ante una situación de emergencia</a></li>
+                <li><a href="./fol_Siete.html#subUno">Determinación de las medidas de prevención y protección individual y colectiva</a></li>
+                <li><a href="./fol_Siete.html#subDos">Interpretación de la señalización de seguridad</a></li>
+                <li><a href="./fol_Siete.html#subTres">Consignas de actuación ante una situación de emergencia</a></li>
+                <li><a href="./fol_Siete.html#subCuatro">Protocolos de actuación ante una situación de emergencia</a></li>
             </ul>
         </section>
     </main>
