--- a/daw/plantillas/plantillaApuntes.html
+++ b/daw/plantillas/plantillaApuntes.html
@@ -19,7 +19,7 @@
         </div>
     </header>
     <div class="contenedorApuntes">
-      <h2 class="tituloTema" id="unoUno">Tema 1. - Título tema</h2> <!-- Título del Tema -->
+      <h2 class="tituloTema" id="subUno">Tema 1. - Título tema</h2> <!-- Título del Tema -->
         <!-- PARRAFO -->
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat dolor ex odio totam repudiandae, quo fuga nisi placeat laudantium eaque odit suscipit dolores et, ipsum voluptates!</p>
         <!-- NOTA -->
@@ -31,7 +31,7 @@
             <li>Elemento</li>
         </ul>
         <!-- subTITULO -->
-        <h3 class="subTitulo" id="unoDos">subTitulo</h3>
+        <h3 class="subTitulo" id="subDos">subTitulo</h3>
         <p><strong>NEGRITA</strong></p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat dolor ex odio totam repudiandae, quo fuga nisi placeat laudantium eaque odit suscipit dolores et, ipsum voluptates!</p>
         <!-- APARTADO -->
@@ -79,7 +79,7 @@
         <div class="menuOpcional">
             <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
             <a href="../../index.html"><div class="botonO">Principal</div></a>
-            <a href="#unoUno"><div class="botonO">Arriba</div></a>
+            <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
     </div>
     <footer class="pieApuntes"><div>SapheryDesings - 2023</div></footer>
