--- a/daw/plantillas/plantillaIndice.html
+++ b/daw/plantillas/plantillaIndice.html
@@ -22,9 +22,9 @@
       <section class="temaIndice"> <!-- Sección Tema -->
           <span>1.- Título Tema</span> <!-- Título Tema -->
           <ul>
-              <li><a href="url#unoUno">SubTitulo</a></li> <!-- # Ancla al subTitulo-->
-              <li><a href="url#unoDos">SubTitulo</a></li>
-              <li><a href="url#unoTres">SubTitulo</a></li>
+              <li><a href="url#subUno">SubTitulo</a></li> <!-- # Ancla al subTitulo-->
+              <li><a href="url#subDos">SubTitulo</a></li>
+              <li><a href="url#subTres">SubTitulo</a></li>
           </ul>
       </section>
     </main>
