--- a/daw/bdUno/indiceBdUno.html
+++ b/daw/bdUno/indiceBdUno.html
@@ -22,79 +22,79 @@
         <section class="temaIndice">
             <span>1.- Introducción a las bases de datos</span>
             <ul>
-                <li><a href="./bdUnoUno.html#unoUno">Evolución histórica</a></li>
-                <li><a href="./bdUnoUno.html#unoDos">Ventajas e inconvenientes</a></li>
-                <li><a href="./bdUnoUno.html#unoTres">Almacenamiento de la información</a></li>
-                <li><a href="./bdUnoUno.html#unoCuatro">Sistemas Gestores de bases de datos</a></li>
-                <li><a href="./bdUnoUno.html#unoCinco">ANSI/X3/SPARC. Estándares y niveles</a></li>
-                <li><a href="./bdUnoUno.html#unoSeis">Modelos de BBDD. Tipos: jerárquico, red, relacional y orientado a objetos</a></li>
-                <li><a href="./bdUnoUno.html#unoSiete">Bases de datos centralizadas y distribuidas</a></li>
+                <li><a href="./bdsubUno.html#subUno">Evolución histórica</a></li>
+                <li><a href="./bdsubUno.html#subDos">Ventajas e inconvenientes</a></li>
+                <li><a href="./bdsubUno.html#subTres">Almacenamiento de la información</a></li>
+                <li><a href="./bdsubUno.html#subCuatro">Sistemas Gestores de bases de datos</a></li>
+                <li><a href="./bdsubUno.html#subCinco">ANSI/X3/SPARC. Estándares y niveles</a></li>
+                <li><a href="./bdsubUno.html#subSeis">Modelos de BBDD. Tipos: jerárquico, red, relacional y orientado a objetos</a></li>
+                <li><a href="./bdsubUno.html#subSiete">Bases de datos centralizadas y distribuidas</a></li>
             </ul>
         </section>
         <section class="temaIndice">
             <span>2.- Modelo entidad-relación</span>
             <ul>
-                <li><a href="./bdUnoDos.html#dosUno">Concepto</a></li>
-                <li><a href="./bdUnoDos.html#dosDos">Entidad: representación gráfica, atributos y tipos de claves</a></li>
-                <li><a href="./bdUnoDos.html#dosTres">Relación: representación gráfica, atributos, grado y cardinalidad</a></li>
-                <li><a href="./bdUnoDos.html#dosCuatro">Diagrama entidad-relación</a></li>
-                <li><a href="./bdUnoDos.html#dosCinco">Modelo entridad-relación extendido</a></li>
-                <li><a href="./bdUnoDos.html#dosSeis">Guía para la construcción de un modelo entidad-relación</a></li>
+                <li><a href="./bdsubDos.html#subUno">Concepto</a></li>
+                <li><a href="./bdsubDos.html#subDos">Entidad: representación gráfica, atributos y tipos de claves</a></li>
+                <li><a href="./bdsubDos.html#subTres">Relación: representación gráfica, atributos, grado y cardinalidad</a></li>
+                <li><a href="./bdsubDos.html#subCuatro">Diagrama entidad-relación</a></li>
+                <li><a href="./bdsubDos.html#subCinco">Modelo entridad-relación extendido</a></li>
+                <li><a href="./bdsubDos.html#subSeis">Guía para la construcción de un modelo entidad-relación</a></li>
             </ul>
         </section>
         <section class="temaIndice">
             <span>3.- Modelo relacional</span>
             <ul>
-                <li><a href="./bdUnoTres.html#tresUno">Terminología del modelo relacional</a></li>
-                <li><a href="./bdUnoTres.html#tresDos">Concepto de relación. Propiedades y relaciones</a></li>
-                <li><a href="./bdUnoTres.html#tresTres">Atributos y dominio de los atributos</a></li>
-                <li><a href="./bdUnoTres.html#tresCuatro">Concepto y tipos de clave: candidatas, primarias, ajenas, alternativas</a></li>
-                <li><a href="./bdUnoTres.html#tresCinco">Valores nulos</a></li>
-                <li><a href="./bdUnoTres.html#tresSeis">Reglas de integridad: de entidad y referencial</a></li>
-                <li><a href="./bdUnoTres.html#tresSiete">Traducción del modelo entidad-relación al modelo relacional. Tipo 1:1. Tipo 1:N. Tipo N:M</a></li>
+                <li><a href="./bdsubTres.html#subUno">Terminología del modelo relacional</a></li>
+                <li><a href="./bdsubTres.html#subDos">Concepto de relación. Propiedades y relaciones</a></li>
+                <li><a href="./bdsubTres.html#subTres">Atributos y dominio de los atributos</a></li>
+                <li><a href="./bdsubTres.html#subCuatro">Concepto y tipos de clave: candidatas, primarias, ajenas, alternativas</a></li>
+                <li><a href="./bdsubTres.html#subCinco">Valores nulos</a></li>
+                <li><a href="./bdsubTres.html#subSeis">Reglas de integridad: de entidad y referencial</a></li>
+                <li><a href="./bdsubTres.html#subSiete">Traducción del modelo entidad-relación al modelo relacional. Tipo 1:1. Tipo 1:N. Tipo N:M</a></li>
             </ul>
         </section>
         <section class="temaIndice">
             <span>4.- Normalización</span>
             <ul>
-                <li><a href="./bdUnoCuatro.html#cuatroUno">Concepto de normalización, dependencias funcionales y sus tipos</a></li>
-                <li><a href="./bdUnoCuatro.html#cuatroDos">Las formas normales</a></li>
-                <li><a href="./bdUnoCuatro.html#cuatroTres">Primera forma normal</a></li>
-                <li><a href="./bdUnoCuatro.html#cuatroCuatro">Segunda forma normal</a></li>
-                <li><a href="./bdUnoCuatro.html#cuatroCinco">Tercera forma normal</a></li>
-                <li><a href="./bdUnoCuatro.html#cuatroSeis">Forma normal Boyce-Codd</a></li>
-                <li><a href="./bdUnoCuatro.html#cuatroSiete">Otras formas normales</a></li>
-                <li><a href="./bdUnoCuatro.html#cuatroOcho">Desnormalización</a></li>
+                <li><a href="./bdsubCuatro.html#subUno">Concepto de normalización, dependencias funcionales y sus tipos</a></li>
+                <li><a href="./bdsubCuatro.html#subDos">Las formas normales</a></li>
+                <li><a href="./bdsubCuatro.html#subTres">Primera forma normal</a></li>
+                <li><a href="./bdsubCuatro.html#subCuatro">Segunda forma normal</a></li>
+                <li><a href="./bdsubCuatro.html#subCinco">Tercera forma normal</a></li>
+                <li><a href="./bdsubCuatro.html#subSeis">Forma normal Boyce-Codd</a></li>
+                <li><a href="./bdsubCuatro.html#subSiete">Otras formas normales</a></li>
+                <li><a href="./bdsubCuatro.html#subOcho">Desnormalización</a></li>
             </ul>
         </section>
         <section class="temaIndice">
             <span>5.- Lenguajes de las BBDD. SQL</span>
             <ul>
-                <li><a href="./bdUnoCinco.html#cincoUno">Tipos de lenguajes para gestionar los datos en un SGBDR corporativo</a></li>
-                <li><a href="./bdUnoCinco.html#cincoDos">Herramientas gráficas proporcionadas por el SGBD para la edición de la BD. Descarga e instalación de MySQL Workbench y MariaDB</a></li>
-                <li><a href="./bdUnoCinco.html#cincoTres">Lenguaje de definición de datos (DDL)</a></li>
-                <li><a href="./bdUnoCinco.html#cincoCuatro">Lenguaje de manipulación de datos (DML)</a></li>
-                <li><a href="./bdUnoCinco.html#cincoCinco">Extensiones y otras cláusulas del lenguaje</a></li>
-                <li><a href="./bdUnoCinco.html#cincoSeis">Herramientas de la BDD para optimizar consultas</a></li>
+                <li><a href="./bdsubCinco.html#subUno">Tipos de lenguajes para gestionar los datos en un SGBDR corporativo</a></li>
+                <li><a href="./bdsubCinco.html#subDos">Herramientas gráficas proporcionadas por el SGBD para la edición de la BD. Descarga e instalación de MySQL Workbench y MariaDB</a></li>
+                <li><a href="./bdsubCinco.html#subTres">Lenguaje de definición de datos (DDL)</a></li>
+                <li><a href="./bdsubCinco.html#subCuatro">Lenguaje de manipulación de datos (DML)</a></li>
+                <li><a href="./bdsubCinco.html#subCinco">Extensiones y otras cláusulas del lenguaje</a></li>
+                <li><a href="./bdsubCinco.html#subSeis">Herramientas de la BDD para optimizar consultas</a></li>
             </ul>
         </section>
         <section class="temaIndice">
             <span>6.- Estrategias para el control de las transacciones y de la concurrencia</span>
             <ul>
-                <li><a href="./bdUnoSeis.html#seisUno">Concepto de integridad</a></li>
-                <li><a href="./bdUnoSeis.html#seisDos">Condepto de transacción. Control</a></li>
-                <li><a href="./bdUnoSeis.html#seisTres">Propiedades de las transacciones: atomicidad, consistencia, aislamiento y permanencia</a></li>
-                <li><a href="./bdUnoSeis.html#seisCuatro">Estados de una transacción: activa, parcialmente comprometida, fallida, abortada y comprometida</a></li>
-                <li><a href="./bdUnoSeis.html#seisCinco">Sentencias de transacciones</a></li>
-                <li><a href="./bdUnoSeis.html#seisSeis">Problemas derivados de la ejecución concurrente de transacciones</a></li>
-                <li><a href="./bdUnoSeis.html#seisSiete">Control de concurrencia: técnicas optimmistas y pesimistas</a></li>
-                <li><a href="./bdUnoSeis.html#seisOcho">Recuperación ante errores. Mecanismos para deshacer transacciones</a></li>
+                <li><a href="./bdsubSeis.html#subUno">Concepto de integridad</a></li>
+                <li><a href="./bdsubSeis.html#subDos">Condepto de transacción. Control</a></li>
+                <li><a href="./bdsubSeis.html#subTres">Propiedades de las transacciones: atomicidad, consistencia, aislamiento y permanencia</a></li>
+                <li><a href="./bdsubSeis.html#subCuatro">Estados de una transacción: activa, parcialmente comprometida, fallida, abortada y comprometida</a></li>
+                <li><a href="./bdsubSeis.html#subCinco">Sentencias de transacciones</a></li>
+                <li><a href="./bdsubSeis.html#subSeis">Problemas derivados de la ejecución concurrente de transacciones</a></li>
+                <li><a href="./bdsubSeis.html#subSiete">Control de concurrencia: técnicas optimmistas y pesimistas</a></li>
+                <li><a href="./bdsubSeis.html#subOcho">Recuperación ante errores. Mecanismos para deshacer transacciones</a></li>
             </ul>
         </section>
         <section class="temaIndice">
             <span>7.- Lenguajes de las BBDD para la creación de su estructura</span>
             <ul>
-                <li><a href="./bdUnoSiete.html#unoUno">Visitas y otras extensiones del lenguaje</a></li>
+                <li><a href="./bdsubSiete.html#subUno">Visitas y otras extensiones del lenguaje</a></li>
             </ul>
         </section>
     </main>
