--- a/daw/dwEntornoCliente/indice_dwEc.html
+++ b/daw/dwEntornoCliente/indice_dwEc.html
@@ -22,81 +22,81 @@
         <section class="temaIndice">
             <span>1.- Selección de arquitecturas y de herramientas de programación</span>
             <ul>
-                <li><a href="./dwEC_Uno.html#unoUno">Modelos de ejecución de código</a></li>
-                <li><a href="./dwEC_Uno.html#unoDos">Lenguajes de progamación en entorno cliente</a></li>
-                <li><a href="./dwEC_Uno.html#unoTres">Mecanismos de ejecución de código en un navegador web</a></li>
-                <li><a href="./dwEC_Uno.html#unoCuatro">Capacidades y limitaciones de ejecución</a></li>
-                <li><a href="./dwEC_Uno.html#unoCinco">Programación de guiones</a></li>
-                <li><a href="./dwEC_Uno.html#unoSeis">Integración del código con las etiquetas HTML</a></li>
-                <li><a href="./dwEC_Uno.html#unoSiete">Herramientas de progamación sobre cliente web. Herramientas y lenguajes asociados</a></li>
+                <li><a href="./dwEC_Uno.html#subUno">Modelos de ejecución de código</a></li>
+                <li><a href="./dwEC_Uno.html#subDos">Lenguajes de progamación en entorno cliente</a></li>
+                <li><a href="./dwEC_Uno.html#subTres">Mecanismos de ejecución de código en un navegador web</a></li>
+                <li><a href="./dwEC_Uno.html#subCuatro">Capacidades y limitaciones de ejecución</a></li>
+                <li><a href="./dwEC_Uno.html#subCinco">Programación de guiones</a></li>
+                <li><a href="./dwEC_Uno.html#subSeis">Integración del código con las etiquetas HTML</a></li>
+                <li><a href="./dwEC_Uno.html#subSiete">Herramientas de progamación sobre cliente web. Herramientas y lenguajes asociados</a></li>
             </ul>
         </section>
         <section class="temaIndice">
             <span>2.- Aplicación y verificación de la sintaxis del lenguaje</span>
             <ul>
-                <li><a href="./dwEC_Dos.html#dosUno">Selección de lenguaje de programación de clientes web</a></li>
-                <li><a href="./dwEC_Dos.html#dosDos">Tipos de datos</a></li>
-                <li><a href="./dwEC_Dos.html#dosTres">Variables</a></li>
-                <li><a href="./dwEC_Dos.html#dosCuatro">Asignaciones</a></li>
-                <li><a href="./dwEC_Dos.html#dosCinco">Operadores</a></li>
-                <li><a href="./dwEC_Dos.html#dosSeis">Sentencias</a></li>
-                <li><a href="./dwEC_Dos.html#dosSiete">Estructuras de control</a></li>
-                <li><a href="./dwEC_Dos.html#dosOcho">Comentarios al código</a></li>
-                <li><a href="./dwEC_Dos.html#dosNueve">Herramientas para programar, probar y depurar el código</a></li>
+                <li><a href="./dwEC_Dos.html#subUno">Selección de lenguaje de programación de clientes web</a></li>
+                <li><a href="./dwEC_Dos.html#subDos">Tipos de datos</a></li>
+                <li><a href="./dwEC_Dos.html#subTres">Variables</a></li>
+                <li><a href="./dwEC_Dos.html#subCuatro">Asignaciones</a></li>
+                <li><a href="./dwEC_Dos.html#subCinco">Operadores</a></li>
+                <li><a href="./dwEC_Dos.html#subSeis">Sentencias</a></li>
+                <li><a href="./dwEC_Dos.html#subSiete">Estructuras de control</a></li>
+                <li><a href="./dwEC_Dos.html#subOcho">Comentarios al código</a></li>
+                <li><a href="./dwEC_Dos.html#subNueve">Herramientas para programar, probar y depurar el código</a></li>
             </ul>
         </section>
         <section class="temaIndice">
             <span>3.- Identificación y aplicación de los objetos predefinidos del lenguaje</span>
             <ul>
-                <li><a href="./dwEC_Tres.html#tresUno">Utilización de objetos. Objetos nativos del lenguaje</a></li>
-                <li><a href="./dwEC_Tres.html#tresDos">Objetos predefinidos asociados al navegador</a></li>
-                <li><a href="./dwEC_Tres.html#tresTres">Clases</a></li>
-                <li><a href="./dwEC_Tres.html#tresCuatro">Creación de nuevas ventanas</a></li>
-                <li><a href="./dwEC_Tres.html#tresCinco">Gestión de la apariencia de ventanas</a></li>
-                <li><a href="./dwEC_Tres.html#tresSeis">Comunicación entre ventanas</a></li>
-                <li><a href="./dwEC_Tres.html#tresSiete">Generación de texto y elementos HTML desde código JavaScript</a></li>
-                <li><a href="./dwEC_Tres.html#tresOcho">Aplicaciones prácticas de los marcos</a></li>
-                <li><a href="./dwEC_Tres.html#tresNueve">Cookies</a></li>
+                <li><a href="./dwEC_Tres.html#subUno">Utilización de objetos. Objetos nativos del lenguaje</a></li>
+                <li><a href="./dwEC_Tres.html#subDos">Objetos predefinidos asociados al navegador</a></li>
+                <li><a href="./dwEC_Tres.html#subTres">Clases</a></li>
+                <li><a href="./dwEC_Tres.html#subCuatro">Creación de nuevas ventanas</a></li>
+                <li><a href="./dwEC_Tres.html#subCinco">Gestión de la apariencia de ventanas</a></li>
+                <li><a href="./dwEC_Tres.html#subSeis">Comunicación entre ventanas</a></li>
+                <li><a href="./dwEC_Tres.html#subSiete">Generación de texto y elementos HTML desde código JavaScript</a></li>
+                <li><a href="./dwEC_Tres.html#subOcho">Aplicaciones prácticas de los marcos</a></li>
+                <li><a href="./dwEC_Tres.html#subNueve">Cookies</a></li>
             </ul>
         </section>
         <section class="temaIndice">
             <span>4.- Programación con arrays, funciones y objetos definidos por el usuario</span>
             <ul>
-                <li><a href="./dwEC_Cuatro.html#cuatroUno">Funciones predefinidas del lenguaje</a></li>
-                <li><a href="./dwEC_Cuatro.html#cuatroDos">Definición y llamadas de funciones</a></li>
-                <li><a href="./dwEC_Cuatro.html#cuatroTres">Objetos definidos por el usuario</a></li>
+                <li><a href="./dwEC_Cuatro.html#subUno">Funciones predefinidas del lenguaje</a></li>
+                <li><a href="./dwEC_Cuatro.html#subDos">Definición y llamadas de funciones</a></li>
+                <li><a href="./dwEC_Cuatro.html#subTres">Objetos definidos por el usuario</a></li>
             </ul>
         </section>
         <section class="temaIndice">
             <span>5.- Integración al código de la gestión de eventos y formularios</span>
             <ul>
-                <li><a href="./dwEC_Cinco.html#cincoUno">Modelo de gestión de eventos</a></li>
-                <li><a href="./dwEC_Cinco.html#cincoDos">Captura y uso de eventos</a></li>
-                <li><a href="./dwEC_Cinco.html#cincoTres">Utilización de formularios desde código</a></li>
-                <li><a href="./dwEC_Cinco.html#cincoCuatro">Modificación de apariencia y comportamiento</a></li>
-                <li><a href="./dwEC_Cinco.html#cincoCinco">Validación y envío</a></li>
-                <li><a href="./dwEC_Cinco.html#cincoSeis">Expresiones regulares</a></li>
+                <li><a href="./dwEC_Cinco.html#subUno">Modelo de gestión de eventos</a></li>
+                <li><a href="./dwEC_Cinco.html#subDos">Captura y uso de eventos</a></li>
+                <li><a href="./dwEC_Cinco.html#subTres">Utilización de formularios desde código</a></li>
+                <li><a href="./dwEC_Cinco.html#subCuatro">Modificación de apariencia y comportamiento</a></li>
+                <li><a href="./dwEC_Cinco.html#subCinco">Validación y envío</a></li>
+                <li><a href="./dwEC_Cinco.html#subSeis">Expresiones regulares</a></li>
             </ul>
         </section>
         <section class="temaIndice">
             <span>6.- Análisis y aplicación del modelo de objetos del documento (DOM)</span>
             <ul>
-                <li><a href="./dwEC_Seis.html#seisUno">El modelo de objetos del documento (DOM)</a></li>
-                <li><a href="./dwEC_Seis.html#seisDos">Objetos del modelo. Propiedades y métodos de los objetos</a></li>
-                <li><a href="./dwEC_Seis.html#seisTres">Acceso al documento desde código</a></li>
-                <li><a href="./dwEC_Seis.html#seisCuatro">Programación de eventos</a></li>
-                <li><a href="./dwEC_Seis.html#seisCinco">Modelos de eventos</a></li>
+                <li><a href="./dwEC_Seis.html#subUno">El modelo de objetos del documento (DOM)</a></li>
+                <li><a href="./dwEC_Seis.html#subDos">Objetos del modelo. Propiedades y métodos de los objetos</a></li>
+                <li><a href="./dwEC_Seis.html#subTres">Acceso al documento desde código</a></li>
+                <li><a href="./dwEC_Seis.html#subCuatro">Programación de eventos</a></li>
+                <li><a href="./dwEC_Seis.html#subCinco">Modelos de eventos</a></li>
             </ul>
         </section>
         <section class="temaIndice">
             <span>7.- Reconocimiento y aplicación de mecanismos de comunicación asíncrona</span>
             <ul>
-                <li><a href="./dwEC_Siete.html#sieteUno">Mecanismos de comunicación asíncrona</a></li>
-                <li><a href="./dwEC_Siete.html#sieteDos">Comunicación asíncrona</a></li>
-                <li><a href="./dwEC_Siete.html#sieteTres">Objetos relacionados. Propiedades y métodos de los objetos</a></li>
-                <li><a href="./dwEC_Siete.html#sieteCuatro">Modificación dinámica del documento utilizado comunicación asíncrona</a></li>
-                <li><a href="./dwEC_Siete.html#sieteCinco">Formatos para el envío y para la recepción de información</a></li>
-                <li><a href="./dwEC_Siete.html#sieteSeis">Librerías de actualización dinámica</a></li>
+                <li><a href="./dwEC_Siete.html#subUno">Mecanismos de comunicación asíncrona</a></li>
+                <li><a href="./dwEC_Siete.html#subDos">Comunicación asíncrona</a></li>
+                <li><a href="./dwEC_Siete.html#subTres">Objetos relacionados. Propiedades y métodos de los objetos</a></li>
+                <li><a href="./dwEC_Siete.html#subCuatro">Modificación dinámica del documento utilizado comunicación asíncrona</a></li>
+                <li><a href="./dwEC_Siete.html#subCinco">Formatos para el envío y para la recepción de información</a></li>
+                <li><a href="./dwEC_Siete.html#subSeis">Librerías de actualización dinámica</a></li>
             </ul>
         </section>
     </main>
