--- a/daw/sistemas/sistemasUno.html
+++ b/daw/sistemas/sistemasUno.html
@@ -19,7 +19,7 @@
     </div>
   </header>
   <div class="contenedorApuntes">
-    <div class="tituloTema" id="unoUno"><h2>Tema 1.- Instalación software libre y propietario</h2></div>
+    <div class="tituloTema" id="subUno"><h2>Tema 1.- Instalación software libre y propietario</h2></div>
         <h4 class="apartado">Introducción</h4>
           <ul>
             <li><strong>Sistema Informático:</strong> Es aquel que almacena y procesa información interrelacionando el hardware y software de un ordenador. </li>
@@ -33,7 +33,7 @@
         <div class="menuOpcional">
           <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
-          <a href="#unoUno"><div class="botonO">Arriba</div></a>
+          <a href="#subUno"><div class="botonO">Arriba</div></a>
       </div>
       <h3 class="subTitulo">Estructura y componentes de un sistema informático, periféricos y adaptadores para la conexión de dispositivos</h3>
         <p>El sistema informático se compone de una parte central (ordenador) y unos dispositivos que facilitan la entrada/salida de informácion (periféricos). Un ordenador está formado por dos tipos de elementos:</p>
@@ -79,9 +79,9 @@
         <div class="menuOpcional">
           <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
-          <a href="#unoUno"><div class="botonO">Arriba</div></a>
+          <a href="#subUno"><div class="botonO">Arriba</div></a>
       </div>
-      <h3 class="subTitulo" id="unoDos">Tipos y topologias de red</h3>
+      <h3 class="subTitulo" id="subDos">Tipos y topologias de red</h3>
         <p>Una red de ordenadores es un conjunto de equipos interconectados entre sí que permiten compartir recursos e información. Es necesario que dispongan de tarjeta de red, cables de conexión, dispositivos perifericos y un software adecuado.</p>
         <h4 class="apartado">Tipos de red según su extensión</h4>
           <ol>
@@ -125,15 +125,15 @@
         <div class="menuOpcional">
           <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
-          <a href="#unoUno"><div class="botonO">Arriba</div></a>
+          <a href="#subUno"><div class="botonO">Arriba</div></a>
       </div>
-      <h3 class="subTitulo" id="unoTres">Mapa físico y lógico de una red</h3>
+      <h3 class="subTitulo" id="subTres">Mapa físico y lógico de una red</h3>
         <p>A la hora de crear o modificar una red es muy importante documentar su estructura. Deberá llevarse a cabo en dos frentes.</p>
       <h4 class="apartado">Mapa físico</h4>
         <p>Es una representación gráfica de una red en el mundo real. Todo deberá tenerse en cuenta para garantizar que la señal llegue a cada equipo de la mejor forma posible. Se realizan por aplicaciones que nos ofrecen subir los mapas como archivos en formatos para mostrar la representación y poder interacturar con los diferentes componentes o cosultar información de esta.</p>
       <h4 class="apartado">Mapa lógico</h4>
         <p>Documentación que hace referencia a los aspectos internos de la red. Es necesario saber que dirección ip tiene asignada cada ordenador, a que subred pertenece etc... Es una representación más técnica, que facilita el mantenimiento de la red, y la incorporación de nuevos nodos. Hay aplicaciones que nos ayudan a obtener la información necesaria de lso equipos, pero cuando se comprueba de forma masiva en redes muy grandes, se suele utilizar la consola de comandos.</p>
-      <h3 class="subTitulo" id="unoCuatro">Arquitectura de un Sistema Operativo</h3>
+      <h3 class="subTitulo" id="subCuatro">Arquitectura de un Sistema Operativo</h3>
         <p>Los sitemas operativos han evoluciodo de forma notable, las consolas tipo texto han dejado paso a interfaces de tipo gráfico como windows o mac os x.</p>
         <p>Podemos distinguir en la arquitectura los siguientes elementos clave: <br></p>
           <ul>
@@ -145,9 +145,9 @@
           <div class="menuOpcional">
             <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
             <a href="../../index.html"><div class="botonO">Principal</div></a>
-            <a href="#unoUno"><div class="botonO">Arriba</div></a>
+            <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
-      <h3 class="subTitulo" id="unoCinco">Funciones del Sistema Operativo</h3>
+      <h3 class="subTitulo" id="subCinco">Funciones del Sistema Operativo</h3>
         <ul>
           <li><strong>Administración de procesos</strong>: Decide el orden de procesamientos de los programas que están a la espera, así como asignar los recursos necesarios para su proceso.</li>
           <li><strong>Administración de recursos</strong>: Este proceso lleva un registro que le permite conocer qué recursos están disponibles y cuáles están siendo utilizados, por cuánto tiempo y por quién.</li>
@@ -166,9 +166,9 @@
         <div class="menuOpcional">
           <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
-          <a href="#unoUno"><div class="botonO">Arriba</div></a>
+          <a href="#subUno"><div class="botonO">Arriba</div></a>
       </div>
-    <h3 class="subTitulo" id="unoSeis">Tipos de sistemas operativos</h3>
+    <h3 class="subTitulo" id="subSeis">Tipos de sistemas operativos</h3>
         <p>Entendemos por sistema operativo el software encargado de poner en marcha un ordenador, garantizando su correcto funcionamiento. Es el intermediario entre usuario y hardware. Los podemos clasificar: <br></p>
       <h4 class="apartado">Según la cantidad de procesos que pueden gestionar de forma simultánea</h4>
           <ul>
@@ -198,15 +198,15 @@
         <div class="menuOpcional">
           <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
-          <a href="#unoUno"><div class="botonO">Arriba</div></a>
+          <a href="#subUno"><div class="botonO">Arriba</div></a>
       </div>
-    <h3 class="subTitulo" id="unoSiete">Tipos de aplicaciones</h3>
+    <h3 class="subTitulo" id="subSiete">Tipos de aplicaciones</h3>
         <ul>
           <li><strong>Aplicaciones locales</strong>: Se almacenan en la unidad de disco local y solamente este tiene acceso a ellas.</li>
           <li><strong>Aplicaciones en red</strong>: Se ejecutan en un entorno de red local. Las aplicaciones primero se ejecutan de manera local y segundo de manera remota.</li>
           <li><strong>Aplicaciones web o en la nube</strong>: La mayor parte se ejecuta en un servidor remoto y queda accesible a través de internet. A veces los datos también se almacenan online.</li>
         </ul>
-    <h3 class="subTitulo" id="unoOcho">Licencias y tipos</h3>
+    <h3 class="subTitulo" id="subOcho">Licencias y tipos</h3>
     <h4 class="apartado">Licencias</h4>
         <ul>
           <li><strong>Gratuitas</strong>: Permite la redistribución, no permiten modificar su código fuente.</li>
@@ -223,14 +223,14 @@
         <div class="menuOpcional">
           <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
-          <a href="#unoUno"><div class="botonO">Arriba</div></a>
+          <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
-    <h3 class="subTitulo" id="unoNueve">Gestores de arranque</h3>
+    <h3 class="subTitulo" id="subNueve">Gestores de arranque</h3>
         <p>Los gestores de arranque son un pequeño programa que se ejecuta una vez iniciada la bios. Prepara los elementos más básicos para que el S.O. funcione.</p>
-    <h3 class="subTitulo" id="unoDiez">Maquinas virtuales</h3>
+    <h3 class="subTitulo" id="subDiez">Maquinas virtuales</h3>
         <p>Son un software que nos permite instalar S.O. de forma que crea que está instalado en un equipo. Hay dos tipos diferentes, las de sistemas y las de proceso. Emulan un ordenador por completo y ejecutan un S.O. en su interior. <br>Utilizan el hardware instalado en el equipo base, todo funcionará como si de un pc normal se tratase.</p>
         <p>Las de proceso no emulan todo el equipo completo sino que ejecutan un proceso concreto como una aplicación. Son muy útiles para crear aplicaciones para varias plataformas, creando un entorno de ejecución para lidiar con el S.O. y no programar específicamente para un sistema.</p>
-    <h3 class="subTitulo" id="unoOnce">Consideraciones previas a la instalación de sistemas operativos libres y propietarios</h3>  
+    <h3 class="subTitulo" id="subOnce">Consideraciones previas a la instalación de sistemas operativos libres y propietarios</h3>  
         <ul>
           <li><strong>Requisitos del hardware</strong>: La documentación de los S.O. ofrece características mínimas requeridas.</li>
           <li><strong>Medios para la instalación del S.O.</strong>: Periféricos para leer los ficheros de instalación.</li>
@@ -239,9 +239,9 @@
         <div class="menuOpcional">
           <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
-          <a href="#unoUno"><div class="botonO">Arriba</div></a>
+          <a href="#subUno"><div class="botonO">Arriba</div></a>
       </div>
-    <h3 class="subTitulo" id="unoDoce">Instalación de sistemas o requisitos, versiones y licencias</h3>
+    <h3 class="subTitulo" id="subDoce">Instalación de sistemas o requisitos, versiones y licencias</h3>
     <h4 class="apartado">Los requisitos principales son:</h4>
         <ul>
           <li>Tipo y velocidad de la CPU</li>
@@ -257,7 +257,7 @@
           <li><strong>Primarias</strong>: Pueden ser reconocidas como particiones de arranque. Un disco cuenta con una única partición primaria que abarca todo el espacio disponible, está limitado a cuatro.</li>
           <li><strong>Extendidas o secundarias</strong>: Complemento o ampliación de las primarias que permiten definir más unidades lógicas. Se crearon para saltarse la limitación de cuatro particiones primarias por disco.</li>
         </ul>
-    <h3 class="subTitulo" id="unoTrece">Instalación y desintalación de aplicaciones. Requisitos, versiones y licencias.</h3>
+    <h3 class="subTitulo" id="subTrece">Instalación y desintalación de aplicaciones. Requisitos, versiones y licencias.</h3>
         <p>Antes de instalarlas debemos estar seguros de que cumplimos lo especificado en la documentación.</p>
       <ul>
         <li><strong>Requisitos</strong>: Nuestro hardware y sitemas operativos son aptos para la ejecución de las aplicaciones.</li>
@@ -270,24 +270,24 @@
         <div class="menuOpcional">
           <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
-          <a href="#unoUno"><div class="botonO">Arriba</div></a>
+          <a href="#subUno"><div class="botonO">Arriba</div></a>
       </div>
-    <h3 class="subTitulo" id="unoCatorce">Actualización de sistemas operativos y aplicaciones</h3>
+    <h3 class="subTitulo" id="subCatorce">Actualización de sistemas operativos y aplicaciones</h3>
         <ul>
           <li><strong>Actualización</strong>: Instalar la nueva versión sin desinstalar la previa.</li>
           <li><strong>Instalación en limpio</strong>: A veces debemos desinstalar la versión previa antes de instalar la nueva.</li>
         </ul>
         <p> En ocasiones su propia interfaz nos advertirá de actualizaciones disponibles. Los S.O. también advierten de actualizaciones disponibles, estas mejoraran y perfilarán funcionalidades y también redundarán en una mayor seguridad. En S.O. linux se pueden utilizar comandos o aplicaciones para comprobar las actualizaciones.</p>
-    <h3 class="subTitulo" id="unoQuince">Archivos de inicio de S.O.</h3>
+    <h3 class="subTitulo" id="subQuince">Archivos de inicio de S.O.</h3>
         <p>Los pasos para iniciar un ordenador varian dependiendo a diversos factores, dispositivos de arranque, existencia de particiones, etc...</p>
       <ol>
         <li>La bios inicia la pantalla y el teclado, verifica la memoria RAM, la fecha y otros datos. El orden de arranque de los periféricos es clave para que el sistema inicie correctamente.</li>
         <li>Luego, carga el gestor de arranque y seguidamente el S.O. Aquí se ejecutan los archivos de inicio. Se ocupan de cargar en memoria los servicios o los programas residentes.</li>
       </ol>
         <p>Estos archivos pueden editarse con un editor de texto simple. En algunos casos contamos con software específico para operar cambios.</p>
-    <h3 class="subTitulo" id="unoDieciseis">Registros del sistema</h3>
+    <h3 class="subTitulo" id="subDieciseis">Registros del sistema</h3>
         <p>En determinados S.O. nos brinda un registro que centraliza la configuración, sus servicios y aplicaciones. El visor de eventos complementan la información del registro. Es preciso realizar mantenimiento y limpieza regular.</p>
-    <h3 class="subTitulo" id="unoDiecisiete">Actualización y mantenimiento de controladores de dispositivos</h3>
+    <h3 class="subTitulo" id="subDiecisiete">Actualización y mantenimiento de controladores de dispositivos</h3>
         <p>Drivers o controladores permiten que el S.O. pueden trabajar con ellos, conforme vayan apareciendo nuevas versiones de ellos para optimizar el rendimiento y minimizar problemas en el futuro.</p>
         <ul>
           <li><strong>Actualización desde el sistema</strong>: El S.O. permite comprobar si hay nuevas versiones y actualizarlas directamente.</li>
@@ -297,7 +297,7 @@
         <div class="menuOpcional">
           <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
-          <a href="#unoUno"><div class="botonO">Arriba</div></a>
+          <a href="#subUno"><div class="botonO">Arriba</div></a>
         </div>
   </div>
   <footer class="pieApuntes"><div>- SapheryDesings -</div></footer>
